syntax = "proto3";

package order;

option go_package = "proto/order;order";

service Order {
    rpc ProcessOrder(ProcessOrderRequest) returns (ProcessOrderResponse);
}

message ProcessOrderRequest {
    uint64 customer_id = 1;
    repeated OrderItem order_items = 2;
}

message ProcessOrderResponse {
    string status = 2;
}

message OrderItem {
    string product_code = 1;
    float unit_price = 2;
    int32 quantity = 3;
}
